# CarWebBot

./: .dockerignore  .env.example  .flake8  .gitignore  .prettierrc  CarWebBot.conf  Dockerfile  README.md  create_telethon_session.py  db.sqlite3  docker-compose.yml  initial_setup.bash  my.cnf  pyproject.toml  requirements.txt  run_telethon.bash  style.css  test.html
app/: main.py
app/api/routers/: announcement.py  index.py  tag.py
app/db/models/: __init__.py  announcement.py  media.py  tag.py
app/services/: create_announcement.py
deprecated/: main.py
deprecated/api/routers/: announcement.py  auth.py  index.py  tag.py
deprecated/core/: security.py
deprecated/db/models/: __init__.py  announcement.py  user.py
static/js/: datetime_datepicker.js  dropzone.js  filters.js  tag_creation.js
templates/: base.html  index.html  login.html  register.html
templates/announcement/: announcement_form.html  create_tag_modal.html
templates/announcement/form_data/: media.html  name.html  price.html  publication_date.html  status.html  tags.html  text.html
web/apps/announcement/: apps.py  forms.py  models.py  serializers.py  services.py  signals.py  storage.py  tasks.py  tests.py  urls.py  views.py
web/apps/announcement/migrations/: 0001_initial.py  0002_alter_media_options_media_order.py  0002_announcement_published_message_link.py  0002_announcement_unpublished_date.py  0002_rename_description_announcement_text.py  0003_alter_tag_name.py  0003_remove_announcement_is_active_and_more.py  0003_tag_channel_id_tag_type.py  0004_alter_announcement_price_and_more.py  0004_alter_announcement_processing_status.py  0004_auto_20230712_1528.py
web/apps/announcement/views/: __init__.py  create.py  delete.py  list.py  media_upload.py  republish.py  retrieve.py  update.py
web/apps/bot/: apps.py  bot.py  models.py  tasks.py  views.py
web/apps/bot/migrations/: 0001_initial.py  0002_alter_publishedmessage_channel_id.py  0003_alter_publishedmessage_channel_id.py
web/apps/bot/services/: telethon.py
web/apps/bot/utils/: announcement_editing.py  announcement_publishing.py  media_conversion.py  media_processing.py  media_publishing.py  subchannel_editing.py  subchannel_publishing.py  telegram.py
web/apps/bot/utils/media/: media_conversion.py  media_processing.py  media_publishing.py
web/apps/settings/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
web/apps/settings/migrations/: 0001_initial.py
web/apps/tag/: admin.py  apps.py  models.py  urls.py  views.py
web/apps/tag/migrations/: 0001_initial.py
web/apps/tag/services/: tag_service.py
web/apps/tag/views/: __init__.py  check.py  create.py  delete.py  list.py  update.py
web/apps/users/: apps.py  backends.py  forms.py  models.py  services.py  urls.py  views.py
web/apps/users/migrations/: 0001_initial.py  0002_alter_user_managers_remove_user_username_and_more.py  0003_alter_user_options_alter_user_managers_and_more.py
web/core/: asgi.py  celery.py  loguru_setup.py  settings.py  urls.py  wsgi.py
web/static/css/: dropzone.css  links.css  modal.css  table.css  tag.css  thumbnail.css
web/static/js/: actions.js  announcement_actions.js  auto_resize.js  datetime_datepicker.js  delete.js  delete_tag.js  dropzone.js  edit_button.js  media_viewer.js  pagination_and_filters.js  status_update.js  tag_creation.js  tag_pagination_and_filter.js  tag_selection.js
web/static/js/tag/create/: formHandlers.js
web/templates/: _base.html  base.html  delete_modal.html  index.html  login.html  modal_viewer.html  pagination.html  register.html  republish_modal.html
web/templates/announcement/: announcement_form.html  announcement_list.html  announcement_update.html  create_tag_modal.html
web/templates/announcement/create/: announcement_create.html
web/templates/announcement/edit/: announcement_edit.html
web/templates/announcement/form_data/: added_date.html  media.html  note.html  price.html  status.html  tags.html  text.html
web/templates/announcement/includes/: create_tag_modal.html  delete_modal.html  modal_viewer.html  pagination.html  republish_modal.html
web/templates/includes/: django_messages.html
web/templates/login/: login.html
web/templates/register/: register.html
web/templates/register/form_data/: email.html  password.html  password_confirmation.html
web/templates/settings/: settings.html
web/templates/tag/: creation.html  tag_list.html
web/templates/tag/create/: tag_create.html
web/templates/tag/edit/: tag_edit.html
web/templates/tag/form_data/: name.html  telegram_channel.html  type.html
web/templates/tag/includes/: delete_modal.html  pagination.html
(+24 files in other folders)
