[tool.poetry]
name = "trogvarr-car-bot"
version = "0.1.0"
description = ""
authors = ["\"\""]
readme = "README.md"
packages = [{include = "trogvarr_car_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
mypy = "^1.3.0"
fastapi = {extras = ["all"], version = "^0.95.2"}
uvicorn = "^0.22.0"
jinja2 = "^3.1.2"
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"
python-multipart = "^0.0.6"
gunicorn = "^20.1.0"
aiomysql = "^0.1.1"
types-pytz = "^2023.3.0.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-decouple = "^3.8"
django = "^4.2.1"
django-debug-toolbar = "^4.1.0"
loguru = "^0.7.0"
mysqlclient = "^2.1.1"
djlint = "^1.29.0"
celery = "^5.2.7"
redis = "^4.5.5"
pytelegrambotapi = "^4.12.0"
python-telegram-bot = "^20.3"
telethon = "^1.28.5"

[tool.isort]
profile = "black"
multi_line_output = 3
force_alphabetical_sort = true
force_single_line = true
lines_after_imports = 2
line_length = 120

[tool.black]
line-length = 120
target_version = ["py311"]
include = '\.pyi?$'
preview = true
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | \.env
  | logs
)/
'''

[tool.mypy]
python_version = "3.11"
files = "web/*.py"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
exclude = '''(migrations)/$'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
