[tool.poetry]
name = "trogvarr-car-bot"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
python-multipart = "^0.0.6"
gunicorn = "^20.1.0"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
python-decouple = "^3.8"
django = "^4.2.1"
django-debug-toolbar = "^4.1.0"
djlint = "^1.29.0"
mysqlclient = "^2.1.1"
loguru = "^0.7.0"
celery = "^5.2.7"
redis = "^4.5.5"
django-easy-logging = "^0.60"
pytz = "^2023.3"
telethon = "^1.29.2"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
flake8-async = "^22.11.14"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^23.7.10"
flake8-builtins = "^2.1.0"
flake8-comprehensions = "^3.14.0"
flake8-django = "^1.4"
flake8-docstrings = "^1.7.0"
flake8-eradicate = "^1.5.0"
flake8-isort = "^6.0.0"
flake8-pytest-style = "^1.7.2"
flake8-secure-coding-standard = "^1.4.0"
flake8-simplify = "^0.20.0"
isort = "^5.12.0"
mypy = "^1.3.0"
pep8-naming = "^0.13.3"
pylint = "^2.17.5"
pyright = "^1.1.320"
types-pytz = "^2023.3.0.0"

[tool.isort]
profile = "black"
multi_line_output = 3
force_alphabetical_sort = true
force_single_line = true
lines_after_imports = 2
line_length = 120

[tool.black]
line-length = 120
target_version = ["py311"]
include = '\.pyi?$'
preview = true
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | \.env
  | logs
)/
'''

[tool.mypy]
python_version = "3.11"
files = "web/*.py"
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true
warn_unused_ignores = true
exclude = ["(migrations)/$", "manage.py"]
disallow_untyped_calls = true
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
